--- a/fiotec-Serpro.API/appsettings.json
+++ b/fiotec-Serpro.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serpro": {
+    "key": "5BIgUOWQgMgYX1kfq9ah7llh3dwa:1liGTDYg1KGs9T6EjsI_ih3F6E0a",
+    "baseUrl": "https://gateway.apiserpro.serpro.gov.br",
+    "dataValidEndpoint": "/datavalid/v3/validate/pf"
+  }
 }
