feat(domain): exceptions específicas e Vo para cpf.

--- a/fiotec-Serpro.Infra.Services/fiotec-Serpro.Infra.Services.csproj
+++ b/fiotec-Serpro.Infra.Services/fiotec-Serpro.Infra.Services.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="System.ServiceModel.Http" Version="8.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\fiotec-Serpro.Domain\fiotec-Serpro.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
