--- a/fiotec-Serpro.API/fiotec-Serpro.API.csproj
+++ b/fiotec-Serpro.API/fiotec-Serpro.API.csproj
@@ -16,4 +16,10 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\fiotec-Serpro.Application\fiotec-Serpro.Application.csproj" />
+    <ProjectReference Include="..\fiotec-Serpro.Domain\fiotec-Serpro.Domain.csproj" />
+    <ProjectReference Include="..\fiotec-Serpro.Infra.Services\fiotec-Serpro.Infra.Services.csproj" />
+  </ItemGroup>
+
 </Project>
