--- a/fiotec-Serpro.API/appsettings.json
+++ b/fiotec-Serpro.API/appsettings.json
@@ -10,5 +10,20 @@
     "key": "5BIgUOWQgMgYX1kfq9ah7llh3dwa:1liGTDYg1KGs9T6EjsI_ih3F6E0a",
     "baseUrl": "https://gateway.apiserpro.serpro.gov.br",
     "dataValidEndpoint": "/datavalid/v2/validate/pf"
+  },
+  "Serilog": {
+    "MinimumLevel": "Debug",
+    "Enrich": [ "FromLogContext" ],
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\Fiotec\\Logs\\Serpro\\serpro-log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 30
+        }
+      }
+    ]
   }
 }
