--- a/fiotec-Serpro.Infra.Services/fiotec-Serpro.Infra.Services.csproj
+++ b/fiotec-Serpro.Infra.Services/fiotec-Serpro.Infra.Services.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="System.ServiceModel.Http" Version="8.1.2" />
   </ItemGroup>
 
