--- a/fiotec-Serpro.API/appsettings.json
+++ b/fiotec-Serpro.API/appsettings.json
@@ -12,10 +12,15 @@
     "dataValidEndpoint": "/datavalid/v2/validate/pf"
   },
   "Serilog": {
-    "MinimumLevel": "Debug",
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
     "Enrich": [ "FromLogContext" ],
     "WriteTo": [
-      { "Name": "Console" },
       {
         "Name": "File",
         "Args": {
