fix(api): retirando chave do appsettings.

--- a/fiotec-Serpro.API/appsettings.json
+++ b/fiotec-Serpro.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Serpro": {
-    "key": "5BIgUOWQgMgYX1kfq9ah7llh3dwa:1liGTDYg1KGs9T6EjsI_ih3F6E0a",
+    "key": "<SUA CHAVE AQUI!>",
     "baseUrl": "https://gateway.apiserpro.serpro.gov.br",
     "dataValidEndpoint": "/datavalid/v2/validate/pf"
   },
